--- a/src/index.html
+++ b/src/index.html
@@ -2,12 +2,17 @@
 <html lang="en">
 <head>
 	<meta charset="utf-8">
-	<title>PlaytarotClient</title>
+	<title>Play Tarot IO</title>
 	<base href="/">
-	<meta content="width=device-width, initial-scale=1" name="viewport">
-	<link href="favicon.ico" rel="icon" type="image/x-icon">
-	<link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&display=swap" rel="stylesheet">
-	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+	<meta content="width=device-width, initial-scale=1"
+		  name="viewport">
+	<link href="favicon.ico"
+		  rel="icon"
+		  type="image/x-icon">
+	<link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&display=swap"
+		  rel="stylesheet">
+	<link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+		  rel="stylesheet">
 </head>
 <body class="mat-typography">
 <app-root></app-root>
